# simple-strength-assistant

./: .devcontainer.json  .env  .env.example  .gitignore  .mcp.json  .prettierignore  .releaserc.json  .sops.yaml  BUILD.md  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  Trunk.toml  UBIQUITOUS_LANGUAGE.md  devenv.nix  devenv.yaml  index.html  manifest.json  package-lock.json  package.json  playwright.config.ts  playwright.fast.config.ts  rewrite_msg.py  rewrite_seq.py  secrets.yaml  service-worker.js  tailwind.config.js  test-debug.js  vercel.json
.claude/: gsd-file-manifest.json  settings.json
.claude/hooks/: agent-command-router.sh
.forgejo/workflows/: build-and-deploy.yml  ci.yml  deploy.yml  hello.yml  rollback.yml  sync-backend-image.yml
.gemini/: gsd-file-manifest.json
.gemini/agents/: gsd-debugger.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-verifier.md
.github/workflows/: build-and-deploy.yml  ci.yml  claude-code-review.yml  deploy.yml  linear_sync.yml  preview.yml  release.yml  rollback.yml  sync-backend-image.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/: manifest.json
backlog/: config.yml
backlog/completed/: task-2.1 - Schema-migration-history-data-layer.md  task-2.2 - Introduce-dioxus-router-for-tab-in-app-navigation.md  task-2.3 - Collapsible-Previous-Sessions-in-active-workout.md  task-2.4 - Full-history-view-navigation-entry-points.md  task-2.5 - Edit-delete-set-modal.md  task-2.6 - Exercise-detail-view-Library.md
backlog/tasks/: task-1 - ralph-smoke-test.md  task-1.1 - add-a-hello-world-function.md  (+9 more)
nix/: backlog-md.nix
public/: db-module.js  db-module.test.js  db-worker.js  file-handle-storage.js  file-handle-storage.test.js  manifest.json  service-worker.js  sql-wasm.js  styles.css  sync-module.js  vercel.json
scripts/: agent-fmt.sh  agent-lint.sh  agent-test.sh  ci-test.sh  fix-vercel-config.sh  inject-sync-url.sh  lint-pr-title.sh  lint.sh  publish-release.mjs  ralph.bats  ralph.sh  update-version.sh
src/: app.rs  format.rs  lib.rs  log_buffer.rs  main.rs  styles.css
sync-backend/: .build-trigger  .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.build.json
tests/: agent-scripts.bats  conflict_resolution_bdd.rs  exercise_list_bdd.rs  exercise_search_bdd.rs  inject-sync-url.bats  library_management_bdd.rs  lint-pr-title.bats  navigation_ui_bdd.rs  record_screen_ui_polish_bdd.rs  sync-module.test.ts  sync_edge_cases_bdd.rs  sync_status_bdd.rs  tab_navigation_bdd.rs  tape_measure_bdd.rs  workout_flow_new_bdd.rs
(+310 files in other folders)
