[package]
name = "simple-strength-assistant"
# Version is managed via git tags and semantic-release, not this file
# See git tags (v0.1.0, v0.2.0, etc.) for actual version
version = "0.1.0"
edition = "2024"
authors = ["rob-mur"]
description = "A simple strength training assistant built with Rust and Dioxus"
license = "AGPLv3"

[dependencies]
dioxus = { version = "0.7.0", features = ["web"] }
wasm-bindgen = "=0.2.106"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


