[package]
name = "simple-strength-assistant"
# Version is managed via git tags and semantic-release, not this file
# See git tags (v0.1.0, v0.2.0, etc.) for actual version
version = "0.1.0"
edition = "2024"
authors = ["rob-mur"]
description = "A simple strength training assistant built with Rust and Dioxus"
license = "AGPLv3"

[dependencies]
dioxus = { version = "=0.7.2", features = ["web"] }
wasm-bindgen = "=0.2.106"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "StorageManager",
    "FileSystemHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "File",
    "Blob",
    "FileReader",
] }
gloo-storage = "0.3"
gloo-utils = "0.2"
thiserror = "2.0"
log = "0.4"
tracing = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"


